project(FilteringExamples)

foreach(example
    CompositeFilterExample
    FlipImageFilter
    FFTImageFilter
    GradientMagnitudeImageFilter
    GradientMagnitudeRecursiveGaussianImageFilter
    GradientRecursiveGaussianImageFilter
    GrayscaleFunctionDilateImageFilter
    BinaryThresholdImageFilter
    BinaryMedianImageFilter
    OtsuThresholdImageFilter
    OtsuMultipleThresholdImageFilter
    ThresholdImageFilter
    CastingImageFilters
    CannyEdgeDetectionImageFilter
    MedianImageFilter
    MeanImageFilter
    MathematicalMorphologyBinaryFilters
    MathematicalMorphologyGrayscaleFilters
    BinaryMinMaxCurvatureFlowImageFilter
    DiscreteGaussianImageFilter
    GaussianBlurImageFunction
    LaplacianRecursiveGaussianImageFilter1
    LaplacianRecursiveGaussianImageFilter2
    ScaleSpaceGenerator2D
    BinomialBlurImageFilter
    CurvatureAnisotropicDiffusionImageFilter
    VectorGradientAnisotropicDiffusionImageFilter
    VectorCurvatureAnisotropicDiffusionImageFilter
    RGBToGrayscale
    BilateralImageFilter
    ResampleOrientedImageFilter
    GradientAnisotropicDiffusionImageFilter
    CurvatureFlowImageFilter
    GradientVectorFlowImageFilter
    SigmoidImageFilter
    RGBCurvatureAnisotropicDiffusionImageFilter
    RGBGradientAnisotropicDiffusionImageFilter
    SignedDanielssonDistanceMapImageFilter
    SecondDerivativeRecursiveGaussianImageFilter
    DerivativeImageFilter
    DanielssonDistanceMapImageFilter
    AntiAliasBinaryImageFilter
    SmoothingRecursiveGaussianImageFilter
    SmoothingRecursiveGaussianImageFilter2
    MorphologicalImageEnhancement
    MinMaxCurvatureFlowImageFilter
    FFTImageFilterFourierDomainFiltering
    LaplacianImageFilter
    ResampleImageFilter
    ResampleImageFilter2
    ResampleImageFilter3
    ResampleImageFilter4
    ResampleImageFilter5
    ResampleImageFilter6
    ResampleImageFilter7
    ResampleImageFilter8
    ResampleImageFilter9
    VotingBinaryHoleFillingImageFilter
    VotingBinaryIterativeHoleFillingImageFilter
    ResampleVolumesToBeIsotropic
    SubsampleVolume
    SpatialObjectToImage1
    SpatialObjectToImage2
    SpatialObjectToImage3
    LaplacianSharpeningImageFilter
    VectorIndexSelection
    VesselnessMeasureImageFilter
    DiffusionTensor3DReconstructionImageFilter
    FFTDirectInverse
    ZeroCrossingBasedEdgeDetectionImageFilter
    WarpImageFilter1
    SurfaceExtraction
    DigitallyReconstructedRadiograph1
    )
  add_example(${example})
endforeach()
if( ITK_USE_FFTWF )
  add_example(FFTDirectInverse2)
endif()

if(BUILD_TESTING)
  add_subdirectory(test)
endif()
