project(IOExamples)

foreach(example
    ImageReadWrite
    ImageReadCastWrite
    ImageReadExtractFilterInsertWrite
    ImageReadRegionOfInterestWrite
    RGBImageReadWrite
    CovariantVectorImageRead
    CovariantVectorImageExtractComponent
    VectorImageReadWrite
    ComplexImageReadWrite
    ImageReadExportVTK
    RGBImageSeriesReadWrite
    ImageSeriesReadWrite
    ImageSeriesReadWrite2
    ImageReadImageSeriesWrite
    DicomSeriesReadSeriesWrite
    DicomSeriesReadImageWrite2
    DicomSeriesReadGaussianImageWrite
    DicomSeriesReadPrintTags
    DicomImageReadWrite
    ImageReadDicomSeriesWrite
    DicomImageReadChangeHeaderWrite
    DicomPrintPatientInformation
    TransformReadWrite
    VisibleHumanStreamReadWrite
    VisibleHumanPasteWrite
    CovariantVectorImageWrite
    ImageReadExtractWrite
    IOPlugin
    IOFactoryRegistration
    )
  add_example(${example})
endforeach()

if(BUILD_TESTING)
  add_subdirectory(test)
endif()

add_subdirectory(XML)
