project(ITKv4ImageRegistration)
include_regular_expression("^.*$")

foreach(example
    ImageRegistration1
    ImageRegistration2
    ImageRegistration3
    ImageRegistration4
    ImageRegistration5
    ImageRegistration6
    ImageRegistration7
    ImageRegistration8
    ImageRegistration9
    ImageRegistration10
    ImageRegistration11
    ImageRegistration12
    ImageRegistration13
    ImageRegistration14
    ImageRegistration15
    ImageRegistration16
    ImageRegistration17
    ImageRegistration18
    ImageRegistration19
    ImageRegistration20
    DeformableRegistration1
    DeformableRegistration2
    DeformableRegistration3
    DeformableRegistration4
    DeformableRegistration5
    DeformableRegistration6
    DeformableRegistration7
    DeformableRegistration8
    DeformableRegistration11
    DeformableRegistration12
    DeformableRegistration13
    DeformableRegistration14
    DeformableRegistration15
    DeformableRegistration16
    DeformableRegistration17
    MultiResImageRegistration1
    MultiResImageRegistration2
    MultiResImageRegistration3
    ChangeInformationImageFilter
    DisplacementFieldInitialization
    LandmarkWarping2
    BSplineWarping1
    BSplineWarping2
    ThinPlateSplineWarp
    ModelToImageRegistration1
    ModelToImageRegistration2
    ImageRegistrationHistogramPlotter
    )
  add_example(${example})
endforeach()

if( ITK_USE_FFTWD )
  foreach(example
      DeformableRegistration9
      DeformableRegistration10
      )
    add_example(${example})
  endforeach()
endif()

if(BUILD_TESTING)
  add_subdirectory(test)
endif()
